Add CI workflow, clean up repo structure
CI:
- Add GitHub Actions workflow with three jobs:
  - checkpatch.pl for kernel coding style
  - Build matrix against kernel 6.1 (Ubuntu 22.04) and 6.8 (Ubuntu 24.04)
  - Sparse static analysis

Cleanup:
- Remove stale root-level build files (Kbuild, Makefile, usbhid/)
  that referenced moved source files
- Update .gitignore for out-of-tree driver project
- Add .github/ exception to dotfile ignore rule

--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,7 @@ modules.order
 !.cocciconfig
 !.get_maintainer.ignore
 !.gitattributes
+!.github/
 !.gitignore
 !.kunitconfig
 !.mailmap
@@ -174,3 +175,23 @@ sphinx_*/
 
 # Rust analyzer configuration
 /rust-project.json
+
+#
+# RS50 driver project-specific ignores
+#
+
+# USB capture files (may contain sensitive data)
+/captures/
+
+# Log files
+/logs/
+/mainline/logs/
+
+# Downloaded manuals (potentially copyrighted)
+/manual/
+
+# Development notes and prompts
+*_prompt.md
+/docs/CODE_REVIEW_*.md
+/docs/linux/
+/docs/windows/
