Update button layout image and encoder documentation
- Replace wheel-buttons.jpeg with new annotated rs-wheel-hub-button-layout.png
- All 17 buttons + D-pad clearly labeled with non-crossing lines
- Update encoder documentation to show 3 functions each:
  - Twist ↑ (rotary axis)
  - Twist ↓ (rotary axis)
  - Push (button)
- Add source image (rs-wheel-hub.png) and grid helper to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,7 @@ sphinx_*/
 /docs/CODE_REVIEW_*.md
 /docs/linux/
 /docs/windows/
+
+# Source images (unannotated) and development helpers
+/docs/images/rs-wheel-hub.png
+/docs/images/rs-wheel-hub-grid.png
