Auto-detect kernel compiler for optimal compatibility
Match the kernel's compiler when possible:
- If kernel was built with clang and clang is available, use clang
- Otherwise, use gcc (kbuild default)
- User can override with: make CC=gcc

This ensures ABI compatibility on clang-built kernels (CachyOS, Arch
LLVM kernels) while maintaining gcc compatibility for most distros.

--- a/mainline/Makefile
+++ b/mainline/Makefile
@@ -3,9 +3,23 @@ KDIR := /lib/modules/$(KVERSION)/build
 
 obj-m := hid-logitech-hidpp.o
 
-# Use: make CC=clang LLVM=1   for clang builds
+# Auto-detect kernel compiler and match it if available
+# User can override with: make CC=gcc
+ifeq ($(origin CC),default)
+  KERNEL_CLANG := $(shell grep -s "^CONFIG_CC_IS_CLANG=y" $(KDIR)/.config)
+  CLANG_AVAIL  := $(shell command -v clang >/dev/null 2>&1 && echo 1)
+  ifeq ($(KERNEL_CLANG)$(CLANG_AVAIL),CONFIG_CC_IS_CLANG=y1)
+    CC := clang
+    LLVM := 1
+  endif
+endif
+
+ifdef LLVM
+  MAKE_OPTS := CC=$(CC) LLVM=$(LLVM)
+endif
+
 all:
-	$(MAKE) -C $(KDIR) M=$(PWD) modules
+	$(MAKE) -C $(KDIR) M=$(PWD) $(MAKE_OPTS) modules
 
 clean:
 	$(MAKE) -C $(KDIR) M=$(PWD) clean
